--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -24,6 +24,21 @@
       <button onclick="getAlistOfQuotes()">Get a list of my favoite quote</button>
       <div id="quote-container"></div>
     </div>
+
+    <form action="/data" method="POST">
+
+      <p>Enter a comma-separated list of comments:</p>
+      <textarea name="text-input" >one, two, three</textarea>
+      <br/><br/>
+
+      <p>Choose some options:</p>
+      <input type="checkbox" name="upper-case" value="true"> Upper-case
+      <br/>
+      <input type="checkbox" name="sort" value="true"> Alphabetize
+      <br/><br/>
+
+      <input type="submit" />
+    </form>
   </body>
 </html>
 
