--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,13 +32,14 @@
       <br/><br/>
 
       <p>Choose some options:</p>
-      <input type="checkbox" name="upper-case" value="true"> Upper-case
+      <input type="checkbox" name="sort-by-length" value="true"> Sort by length
       <br/>
-      <input type="checkbox" name="sort" value="true"> Alphabetize
+      <input type="checkbox" name="sort-by-comments" value="true"> Sort by comments
       <br/><br/>
 
-      <input type="submit" />
+      <input type="submit"/>
     </form>
+
   </body>
 </html>
 
