--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -34,7 +34,7 @@
       <p>Choose some options:</p>
       <input type="checkbox" name="sort-by-length" value="true"> Sort by length
       <br/>
-      <input type="checkbox" name="sort-by-comments" value="true"> Sort by comments
+      <input type="checkbox" name="sort-by-time" value="true"> Sort comments by time
       <br/><br/>
 
       <input type="submit"/>
