--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -30,8 +30,8 @@
 
     <form action="/data" method="POST">
 
-      <p>Enter a comma-separated list of comments:</p>
-      <textarea name="text-input" >one, two, three</textarea>
+      <p>Enter comment:</p>
+      <textarea name="text-input" >Comment Here</textarea>
       <br/><br/>
 
       <p>Choose some options:</p>
