--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Dequan's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-  </head>
-  <body onload="getComments()">
+</head>
+
+<body onload="getComments()">
     <div id="content">
-      <h1>Dequan Zhang</h1>
-      <p>This is my portfolio.</p>
-      <p>I'm currently a EECS transfer student at UC Berkeley! I have been a TA in Data Sturcture in Java.
-          <br> I have an internship at LaunchDarkly before, which is a startup in Oakland, CA.
-      </p>
- 
-      <ul>
-        <li><a href="https://github.com/Dezhang1999">Git Hub</a></li>
-        <li><a href="https://www.linkedin.com/in/dequan-zhang-021209158/">linkedIn</a></li>
-      </ul>
-      <button onclick="addRandomGreeting()">Facts about me</button>
-      <div id="greeting-container"></div>
-      <img src="images/770343.jpg" height="100" width="100">
-      <!--Don't need the button now
+        <h1>Dequan Zhang</h1>
+        <p>This is my portfolio.</p>
+        <p>I'm currently a EECS transfer student at UC Berkeley! I have been a TA in Data Sturcture in Java.
+            <br> I have an internship at LaunchDarkly before, which is a startup in Oakland, CA.
+        </p>
+
+        <ul>
+            <li><a href="https://github.com/Dezhang1999">Git Hub</a></li>
+            <li><a href="https://www.linkedin.com/in/dequan-zhang-021209158/">linkedIn</a></li>
+        </ul>
+        <button onclick="addRandomGreeting()">Facts about me</button>
+        <div id="greeting-container"></div>
+        <img src="images/770343.jpg" height="100" width="100">
+        <!--Don't need the button now
       <button onclick="getAlistOfQuotes()">Get a list of my favoite quote</button>
       <div id="quote-container"></div>
       ------>
-      <div id="comment-container">List of comments</div>
+        <div id="comment-container">List of comments</div>
     </div>
 
     <form action="/data" method="POST" id='myForm' name="myForm">
 
-      <p>Enter comment:</p>
-      <textarea name="text-input" >Comment Here</textarea>
-      <br/><br/>
+        <p>Enter comment:</p>
+        <textarea name="text-input">Comment Here</textarea>
+        <br /><br />
 
-      <p>Choose some options:</p>
-      <input type="checkbox" name="sort-by-length" value="true"> Sort by length
-      <br/>
-      <input type="checkbox" name="sort-by-time" value="true"> Sort comments by time
-      <br/><br/>
-      <button type="submit">Submit Here!</button>
+        <p>Choose some options:</p>
+        <input type="checkbox" name="sort-by-length" value="true"> Sort by length
+        <br />
+        <input type="checkbox" name="sort-by-time" value="true"> Sort comments by time
+        <br /><br />
+        <button type="submit">Submit Here!</button>
     </form>
+    <form action="/login" name="login-form">
+        <button>Login to comment</button>
+    </form>
+</body>
 
-  </body>
 </html>
 
