--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -37,14 +37,11 @@
         <br /><br />
 
         <p>Choose some options:</p>
-        <input type="checkbox" name="sort-by-length" value="true"> Sort by length
-        <br />
-        <input type="checkbox" name="sort-by-time" value="true"> Sort comments by time
-        <br /><br />
         <button type="submit">Submit Here!</button>
     </form>
-    <form action="/login" name="login-form">
+    <form action="/login" id="login-form">
         <button>Login to comment</button>
+        <div id="logout"></div>
     </form>
 </body>
 
