--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCsbaPllICbnDCzu7LUferRyWhGRgdvlQ"></script>
 </head>
 
-<body onload="getComments(); createMap();">
+<body onload="getComments(); createMap(); changeButton();">
     <div id="content">
         <h1>Dequan Zhang</h1>
         <p>This is my portfolio.</p>
@@ -21,28 +21,22 @@
             <li><a href="https://github.com/Dezhang1999">Git Hub</a></li>
             <li><a href="https://www.linkedin.com/in/dequan-zhang-021209158/">linkedIn</a></li>
         </ul>
-        <button onclick="addRandomGreeting()">Facts about me</button>
         <div id="greeting-container"></div>
-        <img src="images/770343.jpg" height="100" width="100">
-        <!--Don't need the button now
-      <button onclick="getAlistOfQuotes()">Get a list of my favoite quote</button>
-      <div id="quote-container"></div>
-      ------>
+        <div id="comment-header">Comment Wall</div>
         <div id="comment-container">List of comments</div>
     </div>
-    <form action="/data" method="POST" id='myForm' name="myForm">
 
-        <p>Enter comment:</p>
-        <textarea name="text-input">Comment Here</textarea>
-        <br /><br />
-
-        <p>Choose some options:</p>
-        <button type="submit">Submit Here!</button>
-    </form>
-    <form action="/login" id="login-form">
-        <button>Login to comment</button>
-        <div id="logout"></div>
-    </form>
+    <div class="form-div">
+        <form action="/data" method="POST" id='myForm'>
+            <textarea name="text-input" placeholder="Comment Here", id="comment-area"></textarea>
+            <button type="submit" id="comment-button"></button>
+        </form>
+    </div>
+    <div class="form-div">
+        <form action="/login" id="login-form">
+            <button id="login-button"></button>
+        </form>
+    </div>
 </body>
 
 </html>
